More fixes for #116, Upgrade Datastax Driver for cassandra, which forces Upgrade to solr 8.5. As of this version a small test dataset has indexed documents to completion. Further testing required.